Adding translated pokemon API